deployment/streams/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: streams-service
  namespace: app-backends
spec:
  selector:
    app: streams
  ports:
  - port: 6000
    targetPort: 6000
