deployment/streams/istio-routing.yaml
# route all requests to users to users-service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streams-service-routes
  namespace: app-backends
spec:
  hosts:
  - streams-service
  http:
  - route:
    - destination:
        host: streams-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: streams-service-backends
spec:
  host: streams-service
  subsets:
  - name: v1
